<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Basic">
        <menu>
            <group
                android:id="@+id/features"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_home" />
                <item
                    android:id="@+id/nav_session"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_session" />
                <item
                    android:id="@+id/nav_batch"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_batch" />
                <item
                    android:id="@+id/nav_course_list"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_course" />
                <item
                    android:id="@+id/nav_scheduler"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_scheduler" />
                <item
                    android:id="@+id/nav_school"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_school" />
                <item
                    android:id="@+id/nav_users"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_users" />
            </group>
        </menu>
    </item>
    <item android:title="Messaging">
        <menu>
            <group
                android:id="@+id/grp_messages"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_notification"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_notificatiioin" />
                <item
                    android:id="@+id/nav_message"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_message" />
                <item
                    android:id="@+id/nav_broadcast"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_broadcast" />
            </group>
        </menu>
    </item>
    <item android:title="General">
        <menu>
            <group
                android:id="@+id/grp_general"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_setting" />
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_help" />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_feedback" />
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_contact" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_about" />
            </group>
        </menu>
    </item>
    <group
        android:id="@+id/logout">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logout"
            >

        </item>
    </group>
</menu>