<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/main_background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="129dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@raw/hikai" />

            <TextView
                android:id="@+id/hikai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/school_story"
                android:gravity="center"
                android:text="HIKAI"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rkm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:text="@string/hikai"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/about1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/school_story"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/about2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fontFamily="@font/school_story"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/about2"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/school_story"
                    android:gravity="center"
                    android:text="@string/version"
                    android:textColor="@color/black"
                    android:textSize="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
